<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/questionnaire_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/description_violence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/description_violence"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/physical_violence_title"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:text="@string/physical_violence_title" />

            <android.support.v7.widget.CardView
                android:id="@+id/physical_violence_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp">

                <TextView
                    android:id="@+id/description_physical_violence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/physical_violence_description"
                    android:textColor="@color/gray" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/psychological_violence_title"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:text="@string/psychological_violence_title" />

            <android.support.v7.widget.CardView
                android:id="@+id/psychological_violence_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp">

                <TextView
                    android:id="@+id/description_psychological_violence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/psychological_violence_description"
                    android:textColor="@color/gray" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/sex_violence_title"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:text="@string/sex_violence_title" />

            <android.support.v7.widget.CardView
                android:id="@+id/sex_violence_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp">

                <TextView
                    android:id="@+id/description_sex_violence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/sex_violence_description"
                    android:textColor="@color/gray" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/economic_violence_title"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:text="@string/economic_violence_title" />

            <android.support.v7.widget.CardView
                android:id="@+id/economic_violence_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp">

                <TextView
                    android:id="@+id/description_economic_violence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/economic_violence_description"
                    android:textColor="@color/gray" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>